--- a/render.yaml
+++ b/render.yaml
@@ -3,24 +3,10 @@ services:
     name: fastlove
     env: python
     buildCommand: "./build.sh"
-    startCommand: "gunicorn fastlove.wsgi:application --bind 0.0.0.0:$PORT"
+    startCommand: "gunicorn fastlove.wsgi:application"
     plan: free
     envVars:
       - key: DEBUG
         value: False
       - key: SECRET_KEY
-        generateValue: true
-      - key: WEB_CONCURRENCY
-        value: 4
-    
-  - type: pserv
-    name: fastlove-db
-    env: postgresql
-    plan: free
-    databaseName: fastlove
-    databaseUser: fastlove
-
-databases:
-  - name: fastlove
-    databaseName: fastlove
-    user: fastlove 
+        generateValue: true 
